hphp/test/slow/parser/async_bad_class.php.expectf

Fatal error: Encountered unexpected token 'async'. in %s/async_bad_class.php on line 3
